--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Stef van Dijk & Sem Bakkum",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.10.1",
